--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MyPosts"></activity>
+        <activity android:name=".PostDescription"></activity>
+        <activity android:name=".MyPosts" />
         <activity android:name=".HospitalAndBloodBank" />
         <activity android:name=".Welcome">
             <intent-filter>
