--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,8 @@
         <activity android:name=".Settings" />
         <activity android:name=".Notifications" />
         <activity android:name=".NewsFeed" />
-        <activity android:name=".Profile" />
+        <activity android:name=".Profile">
+        </activity>
         <activity android:name=".LogIn" />
         <activity android:name=".SignUp" />
         <activity android:name=".MainActivity" />
