--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".PostNewEvent"></activity>
+        <activity android:name=".PostNewEvent"/>
         <activity android:name=".PostDescription" />
         <activity android:name=".MyPosts" />
         <activity android:name=".HospitalAndBloodBank" />
@@ -23,8 +23,7 @@
         <activity android:name=".Settings" />
         <activity android:name=".Notifications" />
         <activity android:name=".NewsFeed" />
-        <activity android:name=".Profile">
-        </activity>
+        <activity android:name=".Profile"/>
         <activity android:name=".LogIn" />
         <activity android:name=".SignUp" />
         <activity android:name=".MainActivity" />
