new show post location activity added .

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".PostNewEvent"/>
+        <activity android:name=".ShowPostLocation"></activity>
+        <activity android:name=".PostNewEvent" />
         <activity android:name=".PostDescription" />
         <activity android:name=".MyPosts" />
         <activity android:name=".HospitalAndBloodBank" />
@@ -29,7 +30,7 @@
         <activity android:name=".Settings" />
         <activity android:name=".Notifications" />
         <activity android:name=".NewsFeed" />
-        <activity android:name=".Profile"/>
+        <activity android:name=".Profile" />
         <activity android:name=".LogIn" />
         <activity android:name=".SignUp" />
         <activity android:name=".MainActivity" />
