Added 2 extra activities.
MyResponses and PeopleWhoResponded.

UI pages done.

Now the whole polishing remains.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ShowPostLocation"></activity>
+        <activity android:name=".PeopleWhoResponded"></activity>
+        <activity android:name=".MyResponses" />
+        <activity android:name=".ShowPostLocation" />
         <activity android:name=".PostNewEvent" />
         <activity android:name=".PostDescription" />
         <activity android:name=".MyPosts" />
@@ -34,10 +36,10 @@
         <activity android:name=".LogIn" />
         <activity android:name=".SignUp" />
         <activity android:name=".MainActivity" />
+
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyAY5l6-B0V6TGUByLYzW7sHKdoSEEC1iv4"/>
-
+            android:value="AIzaSyAY5l6-B0V6TGUByLYzW7sHKdoSEEC1iv4" />
     </application>
 
 </manifest>
