--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/donate_plus"
+        android:icon="@mipmap/donate_plus"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".PeopleWhoResponded"></activity>
