--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,21 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.sbrotee63.donate"
-    >
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    package="com.sbrotee63.donate">
 
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
+        android:icon="@mipmap/donate_plus"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/donate_plus"
-        android:icon="@mipmap/donate_plus"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".PeopleWhoResponded"></activity>
+        <activity android:name=".PeopleWhoResponded" />
         <activity android:name=".MyResponses" />
         <activity android:name=".ShowPostLocation" />
         <activity android:name=".PostNewEvent" />
@@ -33,8 +32,7 @@
         <activity android:name=".Notifications" />
         <activity android:name=".NewsFeed" />
         <activity android:name=".Profile" />
-        <activity android:name=".LogIn">
-        </activity>
+        <activity android:name=".LogIn"></activity>
         <activity android:name=".SignUp" />
         <activity android:name=".MainActivity" />
 
